@@ -22,3 +22,18 @@ with resource_allocator.track_tensor(holder, "buf"):
 
 After the context exits the buffer is registered and may be moved between GPU,
 CPU or even disk automatically.
+
+## Visualising brain snapshots
+
+You can turn a ``.marble`` snapshot into a quick topology image using
+``snapshot_to_image``.
+
+```python
+from marble import snapshot_to_image
+
+png_path = snapshot_to_image("snapshot_123.marble", "topology.png")
+print("saved image to", png_path)
+```
+
+The helper arranges neurons in a circle and draws synapses as straight lines,
+which is handy for debugging and inspecting small brains.
